# ichinichi

./: .gitignore  AGENTS.md  CLAUDE.md  jest.config.cjs  knip.json  package.json  vite.config.ts  wrangler.toml
docs/: architecture-critique.md  notarization-guide.md
docs/plans/: 2026-03-04-structured-sections-design.md  2026-03-05-boundary-collapse-ports.md  2026-03-06-simplify-routes-design.md  2026-03-06-simplify-routes-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/__tests__/: accountSwitchReset.test.ts  canonicalSerialize.test.ts  exportNotes.test.ts  findLatestHabitDefinitions.test.ts  hydratingRepositories.test.ts  indicatorDataFlow.test.ts  indicators.test.tsx  moonPhase.test.ts  noteContentStore.remote.test.ts  noteContentStore.test.ts  noteEditorHeaderLayout.test.ts  noteEditorSection.test.tsx  noteErrorDisplay.test.tsx  offlineNoteLoading.test.ts  placeholderText.test.ts  resilientCursor.test.ts  sectionColors.test.ts  sectionTypes.test.ts  unifiedStorage.test.ts  unifiedSyncedNoteRepository.test.ts  urlState.test.ts  useLocalNoteContent.test.tsx  useNoteDates.test.tsx  useNoteRemoteSync.test.tsx  useNoteSearch.test.tsx  useSyncMachine.test.ts  userFlows.test.tsx
src/components/: AppBootstrap.tsx
src/contexts/: RoutingProvider.tsx  routingContext.ts
src/controllers/: useAppController.ts  useAppModalsController.ts
src/hooks/: useMonthViewState.ts  useNoteContent.ts  useNoteDates.ts  useNoteRemoteSync.ts  useNoteRepository.ts  useSync.ts  (+3 more)
tests/: calendar.spec.ts  fixtures.ts  note-editing.spec.ts
(+77 files in other folders)
