[package]
name = "ichinichi"
version = "1.0.0"
description = "A minimalist daily note application"
authors = ["katspaugh"]
license = "MIT"
repository = "https://github.com/katspaugh/ichinichi"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
